# fast-kd

./: CMakeLists.txt  README.md
bat/: CMakeLists.txt  attribute.cpp  attribute.h  ba_tree.cpp  ba_tree.h  borrowed_array.h  lba_tree_builder.cpp  lba_tree_builder.h
util/: CMakeLists.txt  abstract_array.h  box.cpp  box.h  data_type.cpp  data_type.h  file_mapping.cpp  frustum.h  owned_array.h  plane.cpp  plane.h  scan.h  util.cpp  util.h
viewer/: CMakeLists.txt  app_util.cpp  app_util.h  debug.cpp  main.cpp  shader.cpp  transfer_function_widget.cpp  transfer_function_widget.h
viewer/shaders/: frag.glsl
